--- a/app/composer.json
+++ b/app/composer.json
@@ -24,6 +24,7 @@
         "drupal/cors": "^1.0",
         "drupal/devel": "^1.2",
         "drupal/jsonapi": "^1.22",
+        "drupal/jsonapi_extras": "^2.2",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
