--- a/app/composer.json
+++ b/app/composer.json
@@ -25,6 +25,7 @@
         "drupal/devel": "^1.2",
         "drupal/jsonapi": "^1.22",
         "drupal/jsonapi_extras": "^2.2",
+        "drupal/jwt": "^1.0@alpha",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
