--- a/app/composer.json
+++ b/app/composer.json
@@ -20,6 +20,7 @@
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.5",
         "drupal/console": "^1.0.2",
+        "drupal/content_sync": "^2.0",
         "drupal/core": "~8.5.3",
         "drupal/cors": "^1.0",
         "drupal/devel": "^1.2",
