--- a/app/composer.json
+++ b/app/composer.json
@@ -19,6 +19,7 @@
         "composer/installers": "^1.2",
         "cweagans/composer-patches": "^1.6",
         "drupal-composer/drupal-scaffold": "^2.5",
+        "drupal/admin_toolbar": "^1.24",
         "drupal/console": "^1.0.2",
         "drupal/content_sync": "^2.0",
         "drupal/core": "~8.5.3",
@@ -27,6 +28,7 @@
         "drupal/jsonapi": "^1.22",
         "drupal/jsonapi_extras": "^2.2",
         "drupal/jwt": "^1.0@alpha",
+        "drupal/paragraphs": "^1.3",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
         "webflo/drupal-finder": "^1.0.0",
