--- a/app/config/sync/core.extension.yml
+++ b/app/config/sync/core.extension.yml
@@ -1,4 +1,6 @@
 module:
+  admin_toolbar: 0
+  admin_toolbar_tools: 0
   block: 0
   breakpoint: 0
   content_sync: 0
@@ -7,6 +9,7 @@ module:
   datetime_range: 0
   dblog: 0
   dynamic_page_cache: 0
+  entity_reference_revisions: 0
   field: 0
   field_ui: 0
   file: 0
@@ -30,6 +33,7 @@ module:
   user: 0
   views_ui: 0
   views: 10
+  paragraphs: 11
   minimal: 1000
 theme:
   stark: 0
